# t-gauge-automation

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: super-linter.yml
Documentation/: t-gauge-automation-schematic.fzz
main_app/: main_app.py
scripts/: create_venv.sh
