[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t_gauge_automation"
version = "1.0.0"
description = "Project to autonomously control a t-gauge railway"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tools.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["main_app"]
